--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-#tempfile.workspace = true
 tempfile = "3.6.0"
 assert_cmd = "2.0.8"
+serde = { version = "1.0.136", features = ["derive"] }
+serde_json = "1.0"
