--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,6 @@
 node_modules
 package-lock.json
 target
+proofs
 
-# To use with nektos/act
-.github/event.json
-tests/eddsa/Verifier.toml
+Verifier.toml
